--- a/Korotaev_T_A/Korotaev_T_A/CardGame/src/main/resources/ru/vsu/cs/korotaev/secondScene.fxml
+++ b/Korotaev_T_A/Korotaev_T_A/CardGame/src/main/resources/ru/vsu/cs/korotaev/secondScene.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane fx:id="test" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.vsu.cs.korotaev.SecondScene">
    <children>
-      <ImageView fx:id="back" fitHeight="900.0" fitWidth="1400.0" layoutX="-10.0" layoutY="-38.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="back" fitHeight="806.0" fitWidth="1418.0" layoutX="-10.0" layoutY="-38.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../../../../Sprites/BackGround.jpg" />
          </image>
@@ -200,7 +200,7 @@
             <Image url="@null" />
          </image>
       </ImageView>
-      <Button fx:id="endBut" layoutX="426.0" layoutY="274.0" mnemonicParsing="false" onAction="#endGameBut" prefHeight="201.0" prefWidth="447.0" style="-fx-background-color: #ccc; -fx-border-width: 10px; -fx-effect: dropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 ); -fx-border-style: solid;" text="Вернуться в главное меню" textAlignment="CENTER">
+      <Button fx:id="endBut" disable="true" layoutX="426.0" layoutY="274.0" mnemonicParsing="false" onAction="#endGameBut" prefHeight="201.0" prefWidth="447.0" style="-fx-background-color: #ccc; -fx-border-width: 10px; -fx-effect: dropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 ); -fx-border-style: solid;" text="Вернуться в главное меню" textAlignment="CENTER" visible="false">
          <font>
             <Font name="Verdana Bold" size="25.0" />
          </font>
